--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/FlowerDetailInBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/FlowerDetailInBatch.cshtml
@@ -23,6 +23,7 @@
                         <th class="px-4 py-2">Description</th>
                         <th class="px-4 py-2">Price</th>
                         <th class="px-4 py-2">Remaining Quantity</th>
+                        <th class="px-4 py-2">Status</th>
                         <th class="px-4 py-2">Actions</th> 
 
                     </tr>
@@ -39,6 +40,15 @@
                             <td class="border px-4 py-2">@flower.Description</td>
                             <td class="border px-4 py-2">$@flower.PricePerUnit.ToString("F2")</td>
                             <td class="border px-4 py-2">@flower.RemainingQuantity</td>
+                            <td class="p-4 whitespace-nowrap">
+                                <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
+        @(flower.Status.ToLower() == "active" ? "bg-green-100 text-green-800"
+        : flower.Status.ToLower() == "inactive" ? "bg-red-100 text-red-800"
+        : flower.Status.ToLower() == "needsreview" ? "bg-yellow-100 text-yellow-800"
+        : "bg-gray-100 text-gray-800")">
+                                    @flower.Status
+                                </span>
+                            </td>
                             <td class="border px-4 py-2">
                                 <a href="/FlowerPages/EditFlower?id=@flower.FlowerId" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-1 px-3 rounded">
                                     Edit
